--- a/src/pages/auth/auth.html
+++ b/src/pages/auth/auth.html
@@ -1,3 +1,5 @@
 <ion-content class="auth-bg">
-
+    <div text-center padding>
+        <img src="../../assets/img/logo.png" alt="Phoenix - Nemesis" />
+    </div>
 </ion-content>
