--- a/src/pages/auth/auth.html
+++ b/src/pages/auth/auth.html
@@ -1,5 +1,8 @@
-<ion-content class="auth-bg">
+<!--<ion-content class="auth-bg">-->
+<ion-content>
     <div text-center padding>
-        <img src="../../assets/img/logo.png" alt="Phoenix - Nemesis" />
+        <!--<img src="../../assets/img/logo.png" alt="Phoenix - Nemesis" />-->
+        <br/>
+        <a ion-button (click)="authenticate()" target="_system">Conetar com Battle.net</a>
     </div>
 </ion-content>
